# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
gendiff/: __init__.py  generate_diff.py  make_diff.py  parsing.py
gendiff/formatters/: formatting.py  plain.py  plain_format.py  stylish_format.py
gendiff/scripts/: gendiff.py
gendiff_package/: formatter.py  gendiff.py  parsing.py
gendiff_package/formatters/: json_format.py  plain.py  stylish.py
gendiff_package/scripts/: gendiff.py
tests/: test_gendiff.py  test_gendiff_flat.py  test_gendiff_json.py  test_gendiff_plain.py  test_gendiff_stylish.py  test_gendiff_tree.py  test_parsing.py
tests/fixtures/: expected_json.txt  node.txt  tree1.yaml  tree2.yaml
